# GMLpy

./: .gitignore  README.md  demo.py  generate.py  process.py  pyproject.toml  timings.py
GML/: __init__.py  analytical.py  command.py  io.py  logging.py  numerical.py  physics.py  setup.py  system.py  util.py
GML/glsl/: IRS_critical_fs.glsl  IRS_deflection_map_fs.glsl  IRS_histogram_fs.glsl  IRS_histogram_texel_vs.glsl  IRS_histogram_texture_fs.glsl  IRS_histogram_vs.glsl  IRS_image_fs.glsl  UTIL_texture_uv_fs.glsl  UTIL_unprojected_uv_vs.glsl
GMLID/: __init__.py  analytical.py  command.py  io.py  numerical.py  physics.py  system.py  util.py
GMLID/physics/: lightcurve.py  numerical.py  system.py
